--- a/src/languages/pt/index.json
+++ b/src/languages/pt/index.json
@@ -23,6 +23,7 @@
   "About": {
     "title": "Olá, eu sou o",
     "name": "Vitor Henrique",
+    "picture-alt": "Uma foto do Vitor de camiseta e boné branco enquanto pratica caminhada",
     "me-now": "Atualmente trabalho como especialista em tecnologia no Grupo Boticário. Mas comecei como desenvolvedor web em uma startup de Pelotas que é a Melhor Envio.",
     "me-thrive": "Desde aquela epoca sempre foquei em melhorar meus conhecimentos, tendo estudado SOLID, Clean Code e Testes Automatizados. Além de ter um conhecimento superficial de UX e UI.",
     "me-interests": "Entre meus interesses pessoais estão, ZeldaS, MarioS e os mais diversos tipos de músicas e musicais. Tendo dito isso: \"Exitem milhões de coisas que eu ainda não fiz, mas Aguardem!!\""
